Editted book card styles to avoid overlapping

--- a/camberleybookbuddies/static/css/style.css
+++ b/camberleybookbuddies/static/css/style.css
@@ -62,6 +62,7 @@ h3 {
 
 .book-card {
     height: 25vh;
+    margin-bottom: 2vh;
 }
 
 .review-btn {
